# RFInder

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  rfi_pipeline.py  rfi_pipeline_beams.py  rfinder.py  rfinder_default.yml  rfinder_template.html  rfipipeline.py  setup.py
.github/workflows/: continous_integration.yml  publish_package.yml
.travis/: mypy.docker  py2.docker
RFInder_modules/: rfi.py  rfinder_beam.py  rfinder_files.py  rfinder_plots.py  rfinder_stats.py
report_templates/: full_template.html  rfinder_template.html  time_template.html
rfinder/: __init__.py  main.py  rfi.py  rfinder_default.yml  rfinder_files.py  rfinder_plots.py  rfinder_stats.py  rfinder_uzeros.py
rfinder/templates/: full_template.html  fullshort_template.html  summary_template.html  time_template.html
tutorials/: T1_rfinder_basic.ipynb  T2_rfinder_automated.ipynb  T3_rfinder_time_chunks.ipynb  T4_rfinder_gifs.ipynb  T5_rfi_report.ipynb  Untitled.ipynb
