
[tool.poetry]
name = "rfinder"
version = "1.1.0"
description = "Tool for identify the presence of RFI in an observation, flagging and visualisation"
authors = ["Filippo Marcello Maccagni <filippo.maccagni@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/caracal-pipeline/rfinder"
repository = "https://github.com/caracal-pipeline/rfinder"
keywords = ["Astronomy", "Visualisation", "RFI"]
classifiers = [
          "Development Status :: 5 - Production/Stable",
          "Intended Audience :: Science/Research",
          "Programming Language :: Python :: 3",
          "Topic :: Scientific/Engineering :: Astronomy",
          "Topic :: Software Development :: Libraries :: Python Modules",
          "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
          "Intended Audience :: Science/Research",
          "Operating System :: POSIX :: Linux"
]
license = "GNU GPL v3"
packages = [
    {include = "rfinder"},
]

[tool.poetry.scripts]
rfinder = "rfinder.main:driver"

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^5.2.1"
ffmpeg = "^1.4"
imageio = "^2.27.0"
ipython = "^8.12.0"
jinja2 = "^3.1.2"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pyaml = "^21.10.1"
python-casacore = "^3.5.2"
scipy = "^1.9.3"
pytest = { version = "^7.2.2", optional=true }
pytest-flake8 = { version = "^1.1.1", optional=true }

[tool.poetry.extras]
testing = ["pytest", "pytest-flake8"]

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
flake8 = "*"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
sphinx-copybutton = "^0.5.0"
furo = "^2022.9.15"
